--- a/_sass/_basscss.scss
+++ b/_sass/_basscss.scss
@@ -678,11 +678,11 @@ body {
 }
 
 a {
-  color: #0096cc;
+  color: #56AD7A;
   text-decoration: none;
 }
 a:hover {
-  color: #007199;
+  color: #458A62;
 }
 
 .button {
