--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -58,19 +58,19 @@ body {
 }
 
 .site-header a {
-  color: #333;
+  color: #56AD7A;
   font-weight: 300;
 }
 
 .site-header nav a {
   font-size: 1rem;
-  color: #666;
+  color: #56AD7A;
 }
 
 .site-header nav a:hover {
-  color: #444;
+  color: #458A62;
   opacity: 1;
-  border-bottom: 2px solid #444;
+  border-bottom: 2px solid #458A62;
 }
 
 .site-nav a + a {
@@ -177,8 +177,8 @@ table {
 .pagination,
 .button {
   font-size: 1rem;
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
-  font-weight: 300;
+  font-family: 'Raleway', 'Helvetica Neue', Helvetica, sans-serif;
+  font-weight: 400;
   text-align: center;
 }
 
@@ -240,8 +240,8 @@ table {
 }
 
 form {
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
-  font-weight: 300;
+  font-family: 'Raleway', 'Helvetica Neue', Helvetica, sans-serif;
+  font-weight: 400;
   font-size: 1rem;
 }
 
@@ -307,8 +307,8 @@ h5,
 .h5,
 h6,
 .h6 {
-  font-family: "Lato", 'Helvetica Neue', Helvetica, sans-serif;
-  font-weight: 900;
+  font-family: "Raleway", 'Helvetica Neue', Helvetica, sans-serif;
+  font-weight: 700;
   line-height: 1.2;
   margin: 1em 0 0.5em;
 }
@@ -501,8 +501,8 @@ footer,
 footer .wrap {
   color: #7a7a7a;
   background-color: #fafafa;
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
-  font-weight: 300;
+  font-family: 'Raleway', 'Helvetica Neue', Helvetica, sans-serif;
+  font-weight: 400;
   clear: both;
 }
 
