--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -57,6 +57,18 @@ body {
   width: 100%;
 }
 
+a.fa.fa-github {
+  color: #333;
+}
+
+a.fa.fa-linkedin {
+  color: #333;
+}
+
+a.fa.fa-rss {
+  color: #333;
+}
+
 .site-header a {
   color: #56AD7A;
   font-weight: 300;
@@ -199,7 +211,7 @@ table {
 
 .pagination a:hover, .pagination a:focus {
   background: white;
-  color: #477dca;
+  color: #458A62;
 }
 
 .pagination a:active {
