--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -14,7 +14,7 @@
 */
 
 body {
-  font-family: "Merriweather", "PT Serif", Georgia, "Times New Roman", serif;
+  font-family: "Roboto Slab", "Merriweather", "PT Serif", Georgia, "Times New Roman", serif;
 }
 
 html, body {
