--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
       <li><a href="{{ site.baseurl }}/about">About</a></li>
       <li><a href="{{ site.baseurl }}/contact/">Contact</a></li>
       </ul>
-      Hosted by <a href="https://pages.github.com">GitHub Pages</a>
+      <p>Hosted by <a href="https://pages.github.com">GitHub Pages</a></p>
       </small>
     </div>
   </div>
