add improved footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,8 @@
       <li><a href="{{ site.baseurl }}/">Home</a></li>
       <li><a href="{{ site.baseurl }}/about">About</a></li>
       <li><a href="{{ site.baseurl }}/contact/">Contact</a></li>
-      </ul>
-      <p>Hosted by <a href="https://pages.github.com">GitHub Pages</a></p>
+      <li><span><span class="h5">{ </span>Hosted by <a href="https://pages.github.com">GitHub Pages</a><span class="h5"> }</span></span></li>
+      </ul
       </small>
     </div>
   </div>
