--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,8 @@
     <meta name="author" content="{{ site.author }}">
     {% if page.categories %}<meta name="keywords" content="{{ page.categories | join: ', ' }}">{% endif %}
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-
+    <link rel="image_src" href="/images/favicon.png" />
+    
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/aejuarez.css" | prepend: site.baseurl }}" type="text/css">
 
