add new blog post

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,7 @@
     <!-- From: https://github.com/mmistakes/hpstr-jekyll-theme/blob/master/_includes/head.html -->
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content="/images/favicon.png" />
+    <meta property="og:image" content="http://www.aejuarez.com/images/favicon.png" />
     <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
     <meta property="og:site_name" content="{{ site.title }}" />
     <!-- <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" /> -->
