--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="{{ "/css/aejuarez.css" | prepend: site.baseurl }}" type="text/css">
 
     <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700" rel="stylesheet">
     <link href='//fonts.googleapis.com/css?family=Merriweather:900,900italic,300,300italic' rel='stylesheet' type='text/css'>
-    <link href='//fonts.googleapis.com/css?family=Roboto+Slab:300,700,400' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
     {% if site.show_social_icons %}
       <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -33,15 +33,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"></script>
     <script src="/js/validate-contact-form.js"></script>
-    
-    <!-- Chrome Google fonts Fix -->
-    <script type="text/javascript">
-    jQuery(function($) {
-    if (/chrom(e|ium)/.test(navigator.userAgent.toLowerCase())) {
-        $('body').css('opacity', '1.0') 
-        }
-    })
-    </script>
+
 
     <!-- Icons -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
